[gd_scene load_steps=3 format=3 uid="uid://cjwdhfx3wvnte"]

[ext_resource type="Script" uid="uid://bh2wrvkfickiy" path="res://Core/GameSystems/Experimental/mainmenu.gd" id="1_fsevr"]
[ext_resource type="Texture2D" uid="uid://d2j4g6h72kb66" path="res://Lib/Assets/Textures/1673753631752.png" id="1_kypep"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fsevr")

[node name="ModeSelectPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 392.0
offset_right = 163.0
offset_bottom = 528.0
scale = Vector2(1.4866, 1.4866)

[node name="ModeContainer" type="VBoxContainer" parent="ModeSelectPanel"]
layout_mode = 2

[node name="SingleplayerButton" type="Button" parent="ModeSelectPanel/ModeContainer"]
layout_mode = 2
text = "Single Player"

[node name="Multiverse" type="Button" parent="ModeSelectPanel/ModeContainer"]
layout_mode = 2
text = "Multiverse"

[node name="SandboxButton" type="Button" parent="ModeSelectPanel/ModeContainer"]
layout_mode = 2
text = "Sandbox Mode"

[node name="QuitButton" type="Button" parent="ModeSelectPanel/ModeContainer"]
layout_mode = 2
text = "Quit Game"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.888281
anchor_top = 1.0
anchor_right = 0.95599
anchor_bottom = 1.0
offset_left = -107.5
offset_top = -51.0
offset_right = 53.4999
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "NEON_VANGUARD version 1.2 Proto"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.888281
anchor_top = 0.975926
anchor_right = 0.95599
anchor_bottom = 0.975926
offset_left = -107.5
offset_top = -51.0
offset_right = 53.4999
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "Publisher : Broken By Design 2025"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1538.0
offset_top = 1004.0
offset_right = 1738.0
offset_bottom = 1204.0
scale = Vector2(0.236832, 0.236832)
texture = ExtResource("1_kypep")

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 39.0
offset_right = 234.0
offset_bottom = 237.0
scale = Vector2(1.36361, 1.36361)

[node name="UsernameInput" type="LineEdit" parent="MenuContainer"]
layout_mode = 2
placeholder_text = "Enter Username"

[node name="PasswordInput" type="LineEdit" parent="MenuContainer"]
layout_mode = 2
placeholder_text = "Enter Password"
secret = true

[node name="LoginButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Register"

[node name="ModeSelectButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Select Game Mode"

[node name="StatusLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
